<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NEXT湘南新宿ライン</string>
    <string name="action_settings">Settings</string>
    <string name="label_setting_title">通知時間の設定</string>
    <string name="label_setting_notification_start_time">通知開始時間</string>
    <string name="label_setting_notification_end_time">通知終了時間</string>
    <string name="label_setting_notification_default_start_time">7:00</string>
    <string name="label_setting_notification_default_end_time">9:00</string>
    <string name="label_setting_notification_default_station">横浜</string>
    <string name="label_setting_notification_station">駅の設定</string>
    <string name="label_setting_notification_date">通知する曜日の設定</string>
    <string name="label_setting_date_weekday">平日のみ</string>
    <string name="label_setting_date_weekend">土日のみ</string>
    <string name="label_setting_date_allday">毎日</string>
    <string name="label_setting_starttime_title">通知開始時間</string>
    <string name="label_setting_endtime_title">通知終了時間</string>
    <string name="label_traininfo_traintime">00:00</string>
    <string name="label_traininfo_title">次の電車は</string>
    <string name="label_notification_title">次の湘南新宿ライン</string>
    <string name="label_notification_message_prefix">次の湘南新宿ラインは</string>
    <string name="label_notification_message_suffix">です。</string>
    <string name="label_setting_direction_title">方面の設定</string>
    <string name="label_direction_shinjuku">新宿方面</string>
    <string name="label_direction_ofuna">大船方面</string>
    <string name="label_setting_station_dialog_cancel">戻る</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
