<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.android.yuu.trainnotificator.DaySettingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_setting_notification_date"
            android:id="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:textSize="8pt"
            android:textColor="@color/darkgray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/label_setting_date_weekday"
                android:id="@+id/radiobutton_setting_weekday"
                android:background="@drawable/round_button_pale_green"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:shadowColor="@color/gray"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_setting_date_weekend"
                android:id="@+id/radiobutton_setting_weekend"
                android:background="@drawable/round_button_pale_green"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:shadowColor="@color/gray"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_setting_date_allday"
                android:id="@+id/radiobutton_setting_allday"
                android:background="@drawable/round_button_pale_green"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:shadowColor="@color/gray"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"/>

        </RadioGroup>

    </LinearLayout>


</LinearLayout>
