<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2"
                android:text="@string/label_setting_notification_start_time"
                android:textSize="8pt"
                android:textColor="@color/darkgray"
                android:layout_gravity="left" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_setting_notification_default_start_time"
                android:drawableLeft="@drawable/ic_action_alarms"
                android:id="@+id/button_setting_start_time"
                android:background="@drawable/round_green_button"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textSize="14pt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView3"
                android:text="@string/label_setting_notification_end_time"
                android:layout_gravity="left"
                android:textColor="@color/darkgray"
                android:textSize="8pt" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_setting_notification_default_end_time"
                android:drawableLeft="@drawable/ic_action_alarms"
                android:background="@drawable/round_green_button"
                android:id="@+id/button_setting_end_time"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textSize="14pt"
                android:layout_gravity="top"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>